# ollama-benchmark

./: .env.example  .gitignore  CLAUDE.md  HISTORY.md  LICENSE.txt  README.md  hi-ai.py  ollama-benchmark.py  pyproject.toml
docs/: architecture.md  benchmark-technical.md  error-handling.md  hi-ai-technical.md  ollama-api.md  remote-server.md
