[project]
name = "ollama-benchmark"
version = "0.9.0"
description = "一個用於測試和評估本地 Ollama LLM 模型效能的基準測試工具"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "alex", email = "alex@ai" }
]
keywords = ["ollama", "llm", "cli", "rag", "chat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
all = [
    "pyreadline3>=3.4.0; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/alexcode-cc/ollama-benchmark"
Repository = "https://github.com/alexcode-cc/ollama-benchmark"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
